# emblob

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README.md.old  SECURITY.md  alignment-problem.txt  ansimacros.h  appstate.hh  autoformat.sh  c-example.c  cexample.c  cleanup.sh  cmdline.hh  console.mk  cxx-example.cc  cxxexample.cc  emblob.code-workspace  example  example.c  linkers.hh  logger.hh  logging.hh  mkverbin.cc  mkverobj-todo.md  mkverobj.cc  mkverobj.code-workspace  mkverobj.hh  platform.hh  system.hh  util.hh  version.h  version.hh
.github/workflows/: cmake-multi-platform.yml  codeql.yml
.reuse/: dep5
example/: cexample.c  cxxexample.cc
examples/: CMakeLists.txt  simple.cc  struct.cc
include/: emblob.hh
include/emblob/: ansimacros.h  appstate.hh  cmdline.hh  logger.hh  platform.hh  system.hh  util.hh  version.h  version.hh.in
lib/libsir/: sirfilesystem.c  sirfilesystem.h  sirplatform.h
src/: emblob.cc
support/: bash-util.sh  make_systest.sh  systest.c  systest.h  systest.sln  systest.vcxproj  systest.vcxproj.filters
